# graph-learning

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  findings.md  index.html  package-lock.json  package.json  progress.md  pyproject.toml  task_plan.md  tsconfig.app.json  vite.config.ts
_axon/audits/: lens-all.md  lens-architecture-drag.md  lens-core-capability.md  lens-iteration-leverage.md  lens-learning-quality.md  lens-reliability.md  lens-user-journey.md
_axon/loop/: EDGE_CASES.md  GROWTH_BACKLOG.md  PROTOCOL.md  log.md  state.json  task-list.md
_axon/plans/: 2026-03-19-axonclone-growth-roadmap-v2.md
_axon/scripts/: axon-loop-dryrun.sh  axon-loop-lock.sh  axon-loop.sh  codex-growth-plan.sh  codex-loop.sh  dev.sh  init-axon-loop.sh  init.sh
backend/: main.py
backend/agents/: __init__.py  article_generator.py  base.py  (+4 more)
docs/: axon_clone_ai_系统设计文档（ai_system_design）.md  axon_clone_信息架构文档（ia）.md  axon_clone_前端实现与组件设计文档.md  axon_clone_后端接口文档（api_spec）.md  axon_clone_技术选型文档.md  axon_clone_数据库设计文档（db_design）.md  axon_clone_测试与验收文档（qa_uat）.md  axon_clone_算法与学习策略文档.md  axon_clone_详细prd（产品需求文档）.md  axon_clone_部署运维与开发环境文档.md  axon_clone_页面流文档（page_flow）.md
scripts/: axon-loop-dryrun.sh  axon-loop-lock.sh  axon-loop.sh  build.sh  check_health.py  codex-loop.sh  init-axon-loop.sh  init.sh  init_db.py  install-agent-workflows.mjs  install_codex_growth_architect.py  install_codex_safe_grow.py  install_safe_grow.py  install_safe_grow_global.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/sidecar/: axon-server.sh
src-tauri/src/: main.rs
(+177 files in other folders)
